[tool.poetry]
name = "unittest-proj"
version = "0.1.0"
description = ""
authors = ["SERGEI RIABTCEV <ssrgilmour@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
